[package]
name = "ballstring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"
bevy-inspector-egui = "0.20"
bevy_asset_loader = "0.17"
bevy_egui = "0.22"
bevy_rapier2d = { version = "0.22", features = ["simd-stable", "wasm-bindgen"] }
leafwing-input-manager = "0.10"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
